# oct-lang

./: README.md  errors.py  executer.py  lexer.py  main.py  parser_1.py  program.oct  pyproject.toml  semantic.py
