[tool.poetry]
name = "compiler_oct"
version = "0.0.0.7 BETA"
description = ""
authors = ["octaneDev"]

[tool.poetry.dependencies]
python = "=3.12"
pygments-openssl = "^1.6"
semantic = "^1.0.3"
isc-py-common = "^0.1.27"
lark = "^1.1.9"
ply = "^3.11"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
